--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,18 @@
-/*
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-*/
 
 .footer{
  font-size:small;
  background-color: #E1F5FE;
  padding: 30px;
+}
+
+.plot{
+    width: 50%;
+    height: 50%;
+}
+
+.top-plot-container{
+    display: flex;
+    flex-flow: row;
 }
 .changes{
  margin-top: 20px;
@@ -42,4 +26,11 @@
   margin: 10px;
   margin-bottom: 20px;
   border: solid 1px #B3E5FC;
+}
+
+/*overriding material UI styles*/
+.table-row{
+    height: 20px !important;
+    padding: 3px !important;
+    //background-color: pink !important;
 }
