--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,13 @@
   display: flex;
   flex-flow: row;
 }
+
+.buttons-container{
+ display:flex;
+ flex-flow:column;
+ padding-left: 15px;
+ align-items: center
+}
 /*overriding material UI styles*/
 .table-row{
     height: 25px !important;
@@ -42,7 +49,7 @@
     text-align: center !important;
 }
 .table-column__rank{
-     width: 10 !important;
+     width: 10px !important;
 }
 
 .top-plot-container{
@@ -50,6 +57,8 @@
     flex-flow: row;
 }
 
+/*
 .top-left-container{
     flex-flow: column;
 }
+*/
